--- a/home.html
+++ b/home.html
@@ -7,16 +7,15 @@
         <title>My Social FE</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
-    <body>
+    <body onload="getUserData">
         <div class="container mt-5 text-center border border-primary">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <h2>My Social App</h2>
                 </div>
-            <div class="col-md-12 col-sm-12" >
-                <a class="btn btn-primary" href="http://localhost:9000/api/v1/greet">Login With Google</a>
-            </div>   
+        
             </div>
         </div>
+        <script src="./main.js"></script>
     </body>
 </html>
